--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@ body {
     </div>
   </div>
   <a href="danieletrevisan137@gmail.com">Contact</a>
+  <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
+  
 </div>
 
 
