--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@ body {
   </div>
   <div class="subnav">
     <button class="subnavbtn">Esempi di esercizi svolti <i class="fa fa-caret-down"></i></button>
+    <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
     <div class="subnav-content">
 
     </div>
   </div>
   <a href="danieletrevisan137@gmail.com">Contact</a>
   <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
-  
+  <a href="">Contact</a>
 </div>
 
 
