--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@ body {
     </div>
   </div>
   <div class="subnav">
-    <button class="subnavbtn">Esempi di esercizi svolti <i class="fa fa-caret-down"></i></button>
+    <button class="subnavbtn">Esempi di esercizi svolti <i class="fa fa-caret-down"
+                                                           <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
+                                                           ></i></button>
     <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
     <div class="subnav-content">
 
