--- a/index.html
+++ b/index.html
@@ -84,17 +84,15 @@ body {
     </div>
   </div>
   <div class="subnav">
-    <button class="subnavbtn">Esempi di esercizi svolti <i class="fa fa-caret-down"
-                                                           <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
-                                                           ></i></button>
-    <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
+    <button class="subnavbtn">Esempi di esercizi svolti <i class="fa fa-caret-down"></i></button>
+    
     <div class="subnav-content">
 
     </div>
   </div>
   <a href="danieletrevisan137@gmail.com">Contact</a>
   <a href="https://danieletrevisan.github.io/informatica/info.html">claudio</a>
-  <a href="">Contact</a>
+  
 </div>
 
 
